[FIX] website: `UrlAutocomplete` is displayed behind the modal
Since this fix[1] of the overlapping. The `UrlAutocomplete` wasn't
working as expected, The `AutoCompleteWithPage` dropdown is displayed
behind the dialog when it was inside a dialog.

Steps to reproduce:

* Open the `Website` app
* Click on `Site` > `Edit Menu` > `Add Menu Item`
* Start to type in the url field, the dropdown is displayed behind the
  dialog. => bug

Link

[1]: https://github.com/odoo/odoo/commit/9682cfa174fb39ec9d9874951ea9ee2884058d96

X-original-commit: 6c749a4b0d460defd068774e51d007739861980e

--- a/addons/website/static/src/components/autocomplete_with_pages/url_autocomplete.scss
+++ b/addons/website/static/src/components/autocomplete_with_pages/url_autocomplete.scss
@@ -4,3 +4,8 @@
         cursor: default;
     }
 }
+
+.url-autocomplete-container.ui-widget.ui-autocomplete {
+    // This follow the z-index applied at the overlay_container.scss
+    z-index: $zindex-tooltip + 1;
+}
